--- a/www/index.html
+++ b/www/index.html
@@ -35,78 +35,103 @@
     </header>
 
     <main class="main">
-      <div class="container">
-        <section class="promo">
-          <h1>Индвидуальный пошив<br> галстуков-бабочек</h1>
-          <a href="#" class=" btn promo-btn">Заказать бабочку</a>
-        </section>
-      </div>
-      <div class="container">
-        <section class="features">
+      <section class="promo">
+        <div class="promo-inner">
+          <h1>
+            Индвидуальный пошив<br />
+            галстуков-бабочек
+          </h1>
+          <a href="#" class="btn promo-btn">Заказать бабочку</a>
+        </div>
+      </section>
+
+      <section class="features">
+        <div class="features-inner">
           <h2>Наши работы</h2>
-          <ul class="features-butterfly">
-            <li>
-              <img src="../images/butterfly-1.png" alt="Бабочка такая">
-            </li>
-            <li>
-              <img src="../images/butterfly-2.png" alt="Бабочка растакая">
-            </li>
-            <li>
-              <img src="../images/butterfly-3.png" alt="Бабочка сякая">
-            </li>
-            <li>
-              <img src="../images/butterfly-4.png" alt="Кривая">
-            </li>
-          </ul>
+          <div class="features-butterfly">
+            <div class="features-card">
+              <a href="#" class="card">
+                <img src="../images/butterfly-1.png" alt="Бабочка такая" />
+                <span>Бабочка такая</span>
+              </a>
+            </div>
+            <div class="features-card">
+              <a href="#" class="card">
+                <img src="../images/butterfly-2.png" alt="Бабочка растакая" />
+                <span>Бабочка растакая</span>
+              </a>
+            </div>
+            <div class="features-card">
+              <a href="#" class="card">
+                <img src="../images/butterfly-3.png" alt="Бабочка сякая" />
+                <span>Бабочка сякая</span>
+              </a>
+            </div>
+            <div class="features-card">
+              <a href="#" class="card">
+                <img src="../images/butterfly-4.png" alt="Кривая" />
+                <span>Кривая</span>
+              </a>
+            </div>
+          </div>
+
           <a href="#" class="btn btn-features">Все бабочки</a>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <section class="lead">
-        <div class="container">
-           <h2>Закажи пошив</h2>
-        <p>
-          Заполните форму- наш мастер свяжется с вами, согласует удобное времяя
-          для встречи. На встречи он снимет мерки и поможет определиться с
-          тканью.
-        </p>
-        <div class="forms">
-          <div class="form">
-            <p>
-            Ваше имя<br />
-            <input type="text" />
+        <div class="lead-inner">
+          <h2>Закажи пошив</h2>
+          <p>
+            Заполните форму- наш мастер свяжется с вами, согласует удобное
+            времяя для встречи. На встречи он снимет мерки и поможет
+            определиться с тканью.
           </p>
-          </div>
-          <div class="form">
-            <p>
-            Телефон<br />
-            <input type="number" />
-          </p>
-          </div>
-          <div class="form-btn form">
-            <a href="#" class="btn btn-form">Заказать</a>
+          <div class="forms">
+            <div class="form">
+              <p>
+                Ваше имя<br />
+                <input type="text" />
+              </p>
+            </div>
+            <div class="form">
+              <p>
+                Телефон<br />
+                <input type="number" />
+              </p>
+            </div>
+            <div class="form-btn form">
+              <a href="#" class="btn btn-form">Заказать</a>
+            </div>
           </div>
         </div>
       </section>
-        </div>
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer-inner">
         <div class="footer-wrap">
           <a href="#" class="main-logo fot-logo">Butterfly</a>
-
-        <div class="socials">
           <a class="footer-num" href="tel:+">+7 812 800-80-80</a>
-            <a href="#" style="background-image: url(images/socials/inst.svg);" class="soc-items">inst</a>
-            <a href="#" style="background-image: url(images/socials/fcb.svg);" class="soc-items">fcb</a>
-            <a href="#" style="background-image: url(images/socials/tlg.svg);" class="soc-items">tlg</a>
-
-        </div> 
+          <div class="foot-soc">
+            <a
+              href="#"
+              style="background-image: url(images/socials/inst.svg)"
+              class="soc-items"
+            ></a>
+            <a
+              href="#"
+              style="background-image: url(images/socials/fcb.svg)"
+              class="soc-items"
+            ></a>
+            <a
+              href="#"
+              style="background-image: url(images/socials/tlg.svg)"
+              class="soc-items"
+            ></a>
+          </div>
         </div>
-             
       </div>
-      
     </footer>
 
     <script src="scripts/script.js"></script>
