--- a/www/index.html
+++ b/www/index.html
@@ -87,7 +87,20 @@
             времяя для встречи. На встречи он снимет мерки и поможет
             определиться с тканью.
           </p>
-          <div class="forms">
+          <form action="#" class="form">
+            <div class="form-field">
+              <label for="name" class="form-label">Ваше имя</label>
+              <input name="name" id="name" type="text" class="form-input">
+            </div>
+            <div class="form-field">
+              <label for="phone" class="form-label">Телефон</label>
+              <input type="text" name="phone" id="phone" class="form-input">
+            </div>
+            <div class="form-field">
+              <button class="btn" type="submit">Заказать</button>
+            </div>
+          </form>
+          <!-- <div class="forms">
             <div class="form">
               <p>
                 Ваше имя<br />
@@ -103,7 +116,7 @@
             <div class="form-btn form">
               <a href="#" class="btn btn-form">Заказать</a>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
