--- a/www/index.html
+++ b/www/index.html
@@ -90,11 +90,11 @@
           <form action="#" class="form">
             <div class="form-field">
               <label for="name" class="form-label">Ваше имя</label>
-              <input name="name" id="name" type="text" class="form-input">
+              <input name="name" id="name" type="text" class="form-input" />
             </div>
             <div class="form-field">
               <label for="phone" class="form-label">Телефон</label>
-              <input type="text" name="phone" id="phone" class="form-input">
+              <input type="text" name="phone" id="phone" class="form-input" />
             </div>
             <div class="form-field">
               <button class="btn" type="submit">Заказать</button>
@@ -125,22 +125,23 @@
       <div class="footer-inner">
         <div class="footer-wrap">
           <a href="#" class="main-logo fot-logo">Butterfly</a>
-          <a class="footer-num" href="tel:+">+7 812 800-80-80</a>
+
           <div class="foot-soc">
+            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
             <a
               href="#"
               style="background-image: url(images/socials/inst.svg)"
-              class="soc-items"
+              class="social-items"
             ></a>
             <a
               href="#"
               style="background-image: url(images/socials/fcb.svg)"
-              class="soc-items"
+              class="social-items"
             ></a>
             <a
               href="#"
               style="background-image: url(images/socials/tlg.svg)"
-              class="soc-items"
+              class="social-items"
             ></a>
           </div>
         </div>
