--- a/www/catalog.html
+++ b/www/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Индивидуальный пошив галстуков-бабочек</title>
+    <title>Каталог</title>
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
@@ -34,17 +34,7 @@
       </div>
     </header>
 
-    <main class="main">
-      <section class="promo">
-        <div class="promo-inner">
-          <h1>
-            Индвидуальный пошив<br />
-            галстуков-бабочек
-          </h1>
-          <a href="#" class="btn promo-btn">Заказать бабочку</a>
-        </div>
-      </section>
-
+    <main>
       <section class="features">
         <div class="features-inner">
           <h2>Наши работы</h2>
@@ -131,7 +121,5 @@
         </div>
       </div>
     </footer>
-
-    <script src="scripts/script.js"></script>
   </body>
 </html>
