--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
                 </li>
               </ul>
             </nav>
+            <button class="burger">menu</button>
           </div>
         </div>
       </div>
@@ -96,7 +97,7 @@
               <label for="phone" class="form-label">Телефон</label>
               <input type="text" name="phone" id="phone" class="form-input" />
             </div>
-            <div class="form-field">
+            <div class="form-field form-button">
               <button class="btn" type="submit">Заказать</button>
             </div>
           </form>
@@ -107,10 +108,12 @@
     <footer class="footer">
       <div class="footer-inner">
         <div class="footer-wrap">
-          <a href="#" class="main-logo fot-logo">Butterfly</a>
+          <a href="#" class="foot-logo">Butterfly</a>
 
           <div class="foot-soc">
-            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+            <div class="footer-phone">
+              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+            </div>
 
             <a
               href="#"
