--- a/www/index.html
+++ b/www/index.html
@@ -48,7 +48,7 @@
 
       <section class="features">
         <div class="features-inner">
-          <h2>Наши работы</h2>
+          <h2 class="features-title">Наши работы</h2>
           <div class="features-butterfly">
             <div class="features-card">
               <a href="#" class="card">
