--- a/www/catalog.html
+++ b/www/catalog.html
@@ -13,10 +13,10 @@
         <div class="header-inner">
           <div class="header-wrap">
             <a href="#" class="main-logo">Butterfly</a>
-            <nav class="menu">
+            <nav class="menu j-menu">
               <ul>
                 <li>
-                  <a href="catalog.html">каталог</a>
+                  <a href="catalog.html" class="accent">каталог</a>
                 </li>
                 <li>
                   <a href="#">отзывы</a>
@@ -29,6 +29,7 @@
                 </li>
               </ul>
             </nav>
+            <button class="burger j-burger">menu</button>
           </div>
         </div>
       </div>
@@ -36,7 +37,7 @@
 
     <main>
       <section class="features">
-        <div class="features-inner">
+        <div class="features-inner features-inner-catalog">
           <h2>Наши работы</h2>
 
           <div class="catalog">
@@ -156,21 +157,25 @@
     <footer class="footer">
       <div class="footer-inner">
         <div class="footer-wrap">
-          <a href="#" class="main-logo fot-logo">Butterfly</a>
+          <a href="#" class="foot-logo">Butterfly</a>
 
-          <div class="foot-soc">
-            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          <div class="footer-social">
+            <div class="footer-phone">
+              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+            </div>
 
             <a
               href="#"
               style="background-image: url(images/socials/inst.svg)"
               class="social-items"
-            ></a>
+            >
+            </a>
             <a
               href="#"
               style="background-image: url(images/socials/fcb.svg)"
               class="social-items"
-            ></a>
+            >
+            </a>
             <a
               href="#"
               style="background-image: url(images/socials/tlg.svg)"
@@ -180,5 +185,8 @@
         </div>
       </div>
     </footer>
+  </footer>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/script.js"></script>
   </body>
 </html>
