--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
         <div class="header-inner">
           <div class="header-wrap">
             <a href="#" class="main-logo">Butterfly</a>
-            <nav class="menu">
+            <nav class="menu j-menu">
               <ul>
                 <li>
                   <a href="catalog.html">каталог</a>
@@ -29,7 +29,7 @@
                 </li>
               </ul>
             </nav>
-            <button class="burger">menu</button>
+            <button class="burger j-burger">menu</button>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
         <div class="footer-wrap">
           <a href="#" class="foot-logo">Butterfly</a>
 
-          <div class="foot-soc">
+          <div class="footer-social">
             <div class="footer-phone">
               <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
             </div>
@@ -119,12 +119,14 @@
               href="#"
               style="background-image: url(images/socials/inst.svg)"
               class="social-items"
-            ></a>
+            >
+            </a>
             <a
               href="#"
               style="background-image: url(images/socials/fcb.svg)"
               class="social-items"
-            ></a>
+            >
+            </a>
             <a
               href="#"
               style="background-image: url(images/socials/tlg.svg)"
@@ -134,7 +136,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="scripts/jquery-3.6.0.min.js"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
