--- a/www/index.html
+++ b/www/index.html
@@ -12,20 +12,20 @@
       <div class="container">
         <div class="header-inner">
           <div class="header-wrap">
-            <a href="#" class="main-logo">Butterfly</a>
+            <a href="index.html" class="main-logo">Butterfly</a>
             <nav class="menu j-menu">
               <ul>
                 <li>
                   <a href="catalog.html">каталог</a>
                 </li>
                 <li>
-                  <a href="#">отзывы</a>
+                  <a href="reviews.html">отзывы</a>
                 </li>
                 <li>
-                  <a href="#">контакты</a>
+                  <a href="contacts.html">контакты</a>
                 </li>
                 <li>
-                  <a href="#">faq</a>
+                  <a href="faq.html">faq</a>
                 </li>
               </ul>
             </nav>
