--- a/www/catalog.html
+++ b/www/catalog.html
@@ -41,83 +41,83 @@
           <h2>Наши работы</h2>
 
           <div class="catalog">
-            <a href="#" class="catalog-search">Все</a>
-            <a href="#" class="catalog-search">Строгие</a>
-            <a href="#" class="catalog-search">Веселые</a>
-            <a href="#" class="catalog-search">Для животных</a>
-            <a href="#" class="catalog-search">Детские</a>
-            <a href="#" class="catalog-search">Для взрослых</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="all">Все</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="strict">Строгие</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="fun">Веселые</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="animals">Для животных</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="baby">Детские</a>
+            <a href="#" class="catalog-search j-catalog-search" data-filter="adults">Для взрослых</a>
 
           </div>
 
           <div class="features-butterfly">
-            <div class="features-card">
+            <div class="features-card" data-type="strict">
               <a href="#" class="card">
                 <img src="../images/butterfly-1.png" alt="Бабочка такая" />
                 <span>Бабочка такая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="strict">
               <a href="#" class="card">
                 <img src="../images/butterfly-2.png" alt="Бабочка растакая" />
                 <span>Бабочка растакая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="adults">
               <a href="#" class="card">
                 <img src="../images/butterfly-3.png" alt="Бабочка сякая" />
                 <span>Бабочка сякая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="animals">
               <a href="#" class="card">
                 <img src="../images/butterfly-4.png" alt="Кривая" />
                 <span>Кривая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="adults">
               <a href="#" class="card">
                 <img src="../images/butterfly-21.png" alt="Бабочка такая" />
                 <span>Бабочка такая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="strict">
               <a href="#" class="card">
                 <img src="../images/butterfly-22.png" alt="Бабочка растакая" />
                 <span>Бабочка растакая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="baby">
               <a href="#" class="card">
                 <img src="../images/butterfly23.png" alt="Бабочка сякая" />
                 <span>Бабочка сякая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="adults">
               <a href="#" class="card">
                 <img src="../images/butterfly-24.png" alt="Кривая" />
                 <span>Кривая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="strict">
               <a href="#" class="card">
                 <img src="../images/butterfly-31.png" alt="Бабочка такая" />
                 <span>Бабочка такая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="strict">
               <a href="#" class="card">
                 <img src="../images/butterfly-32.png" alt="Бабочка растакая" />
                 <span>Бабочка растакая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="adults">
               <a href="#" class="card">
                 <img src="../images/butterfly-33.png" alt="Бабочка сякая" />
                 <span>Бабочка сякая</span>
               </a>
             </div>
-            <div class="features-card">
+            <div class="features-card" data-type="fun">
               <a href="#" class="card">
                 <img src="../images/butterfly-34.png" alt="Кривая" />
                 <span>Кривая</span>
