Оставлось поднакинуть стидей и все

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -125,7 +125,7 @@
             </div>
           </div>
 
-          <a href="#" class="btn btn-features">Все бабочки</a>
+          <a href="#" class="btn btn-features j-btn-review">Все бабочки</a>
         </div>
       </section>
 
