--- a/www/reviews.html
+++ b/www/reviews.html
@@ -1,98 +1,198 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Индивидуальный пошив галстуков-бабочек</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="header-inner">
-          <div class="header-wrap">
-            <a href="#" class="main-logo">Butterfly</a>
-            <nav class="menu j-menu">
-              <ul>
-                <li>
-                  <a href="catalog.html">каталог</a>
-                </li>
-                <li>
-                  <a href="reviews.html">отзывы</a>
-                </li>
-                <li>
-                  <a href="contacts.html">контакты</a>
-                </li>
-                <li>
-                  <a href="faq.html">faq</a>
-                </li>
-              </ul>
-            </nav>
-            <button class="burger j-burger">menu</button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Индивидуальный пошив галстуков-бабочек</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header-inner">
+        <div class="header-wrap">
+          <a href="#" class="main-logo">Butterfly</a>
+          <nav class="menu j-menu">
+            <ul>
+              <li>
+                <a href="catalog.html">каталог</a>
+              </li>
+              <li>
+                <a href="reviews.html">отзывы</a>
+              </li>
+              <li>
+                <a href="contacts.html">контакты</a>
+              </li>
+              <li>
+                <a href="faq.html">faq</a>
+              </li>
+            </ul>
+          </nav>
+          <button class="burger j-burger">menu</button>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main class="main">
+
+    <section class="slider">
+      <div class="slider-inner">
+        <h2 class="slider-title">Отзывы</h2>
+
+        <div class="slider-wrap">
+          <div class="carousel j-carousel">
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block"></div>
+                <div class="caorusel-info">
+                  <div class="carousel-info-img">
+                    <img src="../images/lidiya.png" alt="" class="carousel-image">
+                  </div>
+                  <div class="carousel-info-text">
+                    <strong class="caorusel-caption">Лидия Ивановна</strong>
+                    <p class="caorusel-text">Пацаны красавчики! Быстро и аккуратно починили мой лододос!
+                      А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</p>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block"></div>
+                <div class="caorusel-info">
+                  <div class="carousel-info-img">
+                    <img src="../images/stathem.png" alt="" class="carousel-image">
+                  </div>
+                  <div class="carousel-info-text">
+                    <strong class="caorusel-caption">Джейсон Стэтхэм</strong>
+                    <p class="caorusel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum debitis
+                      error
+                      culpa beatae magni ullam quia! Illo quas eos repellendus, ipsum modi veniam deserunt culpa rerum,
+                      quod, dolores unde magnam.</p>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block"></div>
+                <div class="caorusel-info">
+                  <div class="carousel-info-img">
+                    <img src="../images/djony.png" alt="" class="carousel-image">
+                  </div>
+                  <div class="carousel-info-text">
+                    <strong class="caorusel-caption">Джонни Депп</strong>
+                    <p class="caorusel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum debitis
+                      error
+                      culpa beatae magni ullam quia! Illo quas eos repellendus, ipsum modi veniam deserunt culpa rerum,
+                      quod, dolores unde magnam.</p>
+                  </div>
+
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </header>
+    </section>
 
-    <main class="main">
-      <section class="lead">
-        <div class="lead-inner">
-          <h2>Закажи пошив</h2>
-          <p>
-            Заполните форму- наш мастер свяжется с вами, согласует удобное
-            времяя для встречи. На встречи он снимет мерки и поможет
-            определиться с тканью.
-          </p>
-          <form action="#" class="form">
-            <div class="form-field">
-              <label for="name" class="form-label">Ваше имя</label>
-              <input name="name" id="name" type="text" class="form-input" />
-            </div>
-            <div class="form-field">
-              <label for="phone" class="form-label">Телефон</label>
-              <input type="text" name="phone" id="phone" class="form-input" />
-            </div>
-            <div class="form-field form-button">
-              <button class="btn" type="submit">Заказать</button>
-            </div>
-          </form>
-        </div>
-      </section>
-    </main>
 
-    <footer class="footer">
-      <div class="footer-inner">
-        <div class="footer-wrap">
-          <a href="#" class="foot-logo">Butterfly</a>
+    <!-- <section class="slider">
+      <div class="slider-inner">
+        <h2 class="slider-title">Каруселька</h2>
 
-          <div class="footer-social">
-            <div class="footer-phone">
-              <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+        <div class="slider-wrap">
+          <div class="carousel j-carousel">
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block red"></div>
+                <div class="caorusel-info">
+                  <strong class="caorusel-caption">Lorem, ipsum dolor.</strong>
+                  <p class="caorusel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum debitis error
+                    culpa beatae magni ullam quia! Illo quas eos repellendus, ipsum modi veniam deserunt culpa rerum,
+                    quod, dolores unde magnam.</p>
+                </div>
+              </div>
             </div>
-
-            <a
-              href="#"
-              style="background-image: url(images/socials/inst.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/fcb.svg)"
-              class="social-items"
-            >
-            </a>
-            <a
-              href="#"
-              style="background-image: url(images/socials/tlg.svg)"
-              class="social-items"
-            ></a>
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block green"></div>
+                <div class="caorusel-info">
+                  <strong class="caorusel-caption">Lorem, ipsum dolor.</strong>
+                  <p class="caorusel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum debitis error
+                    culpa beatae magni ullam quia! Illo quas eos repellendus, ipsum modi veniam deserunt culpa rerum,
+                    quod, dolores unde magnam.</p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item-wrap">
+              <div class="carousel-item">
+                <div class="caorusel-color-block blue"></div>
+                <div class="caorusel-info">
+                  <strong class="caorusel-caption">Lorem, ipsum dolor.</strong>
+                  <p class="caorusel-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum debitis error
+                    culpa beatae magni ullam quia! Illo quas eos repellendus, ipsum modi veniam deserunt culpa rerum,
+                    quod, dolores unde magnam.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </footer>
-    <script src="scripts/jquery-3.6.0.min.js"></script>
-    <script src="scripts/script.js"></script>
-  </body>
+    </section> -->
+
+    <section class="lead">
+      <div class="lead-inner">
+        <h2>Закажи пошив</h2>
+        <p>
+          Заполните форму- наш мастер свяжется с вами, согласует удобное
+          времяя для встречи. На встречи он снимет мерки и поможет
+          определиться с тканью.
+        </p>
+        <form action="#" class="form">
+          <div class="form-field">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input name="name" id="name" type="text" class="form-input" />
+          </div>
+          <div class="form-field">
+            <label for="phone" class="form-label">Телефон</label>
+            <input type="text" name="phone" id="phone" class="form-input" />
+          </div>
+          <div class="form-field form-button">
+            <button class="btn" type="submit">Заказать</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <a href="#" class="foot-logo">Butterfly</a>
+
+        <div class="footer-social">
+          <div class="footer-phone">
+            <a class="footer-num" href="tel:+78128008080">+7 812 800-80-80</a>
+          </div>
+
+          <a href="#" style="background-image: url(images/socials/inst.svg)" class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/fcb.svg)" class="social-items">
+          </a>
+          <a href="#" style="background-image: url(images/socials/tlg.svg)" class="social-items"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+  <script src="scripts/slick.min.js"></script>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
